Closed Bug 986352 Opened 11 years ago Closed 11 years ago

[bluedroid] Fix hfp-fallback build break due to miss Reset() for BluetoothHfpManager

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: shawnjohnjr, Assigned: shawnjohnjr)

References

Details

Attachments

(1 file, 1 obsolete file)

/home/dannyliang/work/codes/b2g_flatfish_github/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.6/bin/../lib/gcc/arm-linux-androideabi/4.6.x-google/../../../../arm-linux-androideabi/bin/ld: /home/dannyliang/work/codes/b2g_flatfish_github/objdir-gecko/toolkit/library/../../dom/bluetooth/BluetoothHfpManager.o: in function vtable for mozilla::dom::bluetooth::BluetoothHfpManager:BluetoothHfpManager.cpp(.data.rel.ro._ZTVN7mozilla3dom9bluetooth19BluetoothHfpManagerE+0x38): error: undefined reference to 'mozilla::dom::bluetooth::BluetoothHfpManager::Reset()'
I found this bug while bringing up flatfish for supporting bluedroid.
OS: Linux → Gonk (Firefox OS)
Hardware: x86_64 → ARM
Attachment #8394630 - Flags: review?(echou) → review+
Attachment #8394630 - Attachment is obsolete: true
Attachment #8394630 - Flags: feedback?(btian)
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: