dom/bluetooth/bluedroid/hfp-fallback/BluetoothHfpManager.cpp
@@ -180,4 +180,10 @@ BluetoothHfpManager::DisconnectSco()
   return false;
 }
 
+void
+BluetoothHfpManager::Reset()
+{
+  MOZ_ASSERT(NS_IsMainThread());
+}
+
 NS_IMPL_ISUPPORTS1(BluetoothHfpManager, nsIObserver)
